feat: implement safe document retrieval method and enhance PDF generation logic